[gd_scene load_steps=14 format=2]

[ext_resource path="res://tex/BubbaHead.png" type="Texture" id=1]
[ext_resource path="res://tex/BubbaBody.png" type="Texture" id=2]
[ext_resource path="res://Bubba.gd" type="Script" id=3]
[ext_resource path="res://sfx/rumble.ogg" type="AudioStream" id=4]
[ext_resource path="res://sfx/engine.ogg" type="AudioStream" id=5]
[ext_resource path="res://Recycler.tscn" type="PackedScene" id=6]
[ext_resource path="res://Mountpoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://HealingSpot.tscn" type="PackedScene" id=8]
[ext_resource path="res://tex/BubbaNeck.png" type="Texture" id=9]
[ext_resource path="res://sfx/hit.wav" type="AudioStream" id=10]
[ext_resource path="res://RotatingGun.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.106, 3.67123 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 351.095, 3.86005 )

[node name="Bubba" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 20
script = ExtResource( 3 )

[node name="NeckSprite" type="Sprite" parent="."]
position = Vector2( 448.108, 151.891 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="BodySprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HeadSprite" type="Sprite" parent="."]
position = Vector2( 555.876, 123.606 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Roof" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -229.987, -101.61, -64.0054, -184.486, 102.219, -101.628, 98.7193, -97.32, -64.004, -179.793, -227.448, -97.7628 )
one_way_collision = true
one_way_collision_margin = 8.0

[node name="Seat" type="CollisionShape2D" parent="."]
position = Vector2( 208.827, -165.683 )
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 8.0

[node name="Ladder" type="CollisionShape2D" parent="."]
position = Vector2( 208.827, -83.6827 )
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 8.0

[node name="UpperLevel" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PoolVector2Array( -287.556, 9.15321, -255.203, -23, 254.618, -23, 286.972, 9.15322, 281.177, 9.15321, 253.114, -19, -253.697, -19, -281.559, 8.85831 )
one_way_collision = true
one_way_collision_margin = 8.0
__meta__ = {
"_edit_lock_": true
}

[node name="LowerLevel" type="CollisionPolygon2D" parent="."]
position = Vector2( -9.92749, 96.5675 )
polygon = PoolVector2Array( -404.678, 7.84546, -372.603, -24, 392.293, -24, 425.624, 8.92161, 425.413, 16, 494.521, 16, 496.29, 20.6993, 421.207, 19.4111, 421.018, 11.0199, 390.814, -20, -371.002, -20, -399.549, 7.85013 )
one_way_collision = true
one_way_collision_margin = 8.0
__meta__ = {
"_edit_lock_": true
}

[node name="UpperRunningBoard" type="CollisionShape2D" parent="."]
position = Vector2( 0, 188 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 8.0
__meta__ = {
"_edit_lock_": true
}

[node name="LowerRunningBoard" type="CollisionShape2D" parent="."]
position = Vector2( 0, 252 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 8.0
__meta__ = {
"_edit_lock_": true
}

[node name="Forehead" type="CollisionPolygon2D" parent="."]
position = Vector2( 555.876, 123.606 )
polygon = PoolVector2Array( -120.44, -96.1751, -49.5862, -93.2633, 28.3854, -84.2044, 78.8567, -68.9983, 103.122, -34.0567, 111.857, -0.0856476, 104.001, -4.6434, 96.0566, -33.0757, 75.1506, -63.1804, 27.9029, -76.1422, -50.7039, -86.1771, -109.659, -89.522 )
one_way_collision = true
one_way_collision_margin = 8.0
__meta__ = {
"_edit_lock_": true
}

[node name="Jaw" type="CollisionPolygon2D" parent="."]
position = Vector2( 555.876, 123.606 )
polygon = PoolVector2Array( -62.0457, 61.1681, -54.0544, 38.1163, -38.6865, 18.7528, -27.3143, 9.2247, -15.942, 10.1468, -12.8685, 18.1381, -15.942, 30.7397, -23.3186, 51.64, -7.02869, 57.4798, 1.8847, 57.4798, 9.56866, 53.1768, 13.5643, 49.1812, 20.6335, 49.1812, 24.3218, 52.5621, 25.5513, 60.8608, 30.1616, 61.4755, 34.1572, 53.7915, 43.0707, 49.4885, 50.4472, 52.2548, 52.9061, 57.4798, 51.0619, 66.7006, 56.9017, 68.5447, 59.3606, 59.324, 65.5078, 54.4063, 72.8843, 55.9431, 74.1138, 62.3976, 71.9623, 69.4668, 81.4904, 68.8521, 85.486, 63.9344, 88.8669, 57.4798, 98.7024, 57.7872, 101.161, 62.7049, 100.854, 67.6227, 83.3345, 74.0771, 61.2047, 73.4624, -31.6172, 55.6357, -24.8554, 36.5795, -18.4009, 16.6013, -25.4701, 14.7571, -49.7513, 40.2678, -55.8985, 61.1681 )
one_way_collision = true
one_way_collision_margin = 8.0
__meta__ = {
"_edit_lock_": true
}

[node name="Recycler" parent="." instance=ExtResource( 6 )]
position = Vector2( -130, 144 )

[node name="WakeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ReadyTimer" type="Timer" parent="."]
one_shot = true

[node name="StartupRumble" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="EngineSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="OwSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="HealingSpot" parent="." instance=ExtResource( 8 )]
position = Vector2( -24.9383, -50.5783 )

[node name="Mountpoint" parent="." instance=ExtResource( 7 )]
position = Vector2( 255, 40 )

[node name="Mountpoint2" parent="." instance=ExtResource( 7 )]
position = Vector2( -255, 40 )

[node name="Mountpoint3" parent="." instance=ExtResource( 7 )]
position = Vector2( -166, 40 )

[node name="Mountpoint4" parent="." instance=ExtResource( 7 )]
position = Vector2( -85, 40 )

[node name="Mountpoint5" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 40 )

[node name="Mountpoint6" parent="." instance=ExtResource( 7 )]
position = Vector2( 83, 40 )

[node name="Mountpoint7" parent="." instance=ExtResource( 7 )]
position = Vector2( 168, 40 )

[node name="Mountpoint14" parent="." instance=ExtResource( 7 )]
position = Vector2( 340, 146 )

[node name="Mountpoint13" parent="." instance=ExtResource( 7 )]
position = Vector2( -346, 146 )

[node name="Mountpoint12" parent="." instance=ExtResource( 7 )]
position = Vector2( -257, 146 )

[node name="Mountpoint11" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 146 )

[node name="Mountpoint10" parent="." instance=ExtResource( 7 )]
position = Vector2( 85, 146 )

[node name="Mountpoint9" parent="." instance=ExtResource( 7 )]
position = Vector2( 168, 146 )

[node name="Mountpoint8" parent="." instance=ExtResource( 7 )]
position = Vector2( 253, 146 )

[node name="RotatingGun" parent="." instance=ExtResource( 11 )]
position = Vector2( 252.101, -4.19006 )
[connection signal="timeout" from="WakeTimer" to="." method="_on_WakeTimer_timeout"]
[connection signal="timeout" from="ReadyTimer" to="." method="_on_ReadyTimer_timeout"]
